Fix topnavigation on small screens

--- a/_sass/modules/_header.scss
+++ b/_sass/modules/_header.scss
@@ -83,7 +83,6 @@
 
 .header ul {
   align-items: center;
-  display: none;
   flex: 1;
   line-height: var(--line-height);
   order: 1;
